[gd_scene load_steps=65 format=2]

[ext_resource path="res://assets/Shaders/WhiteColor.shader" type="Shader" id=1]
[ext_resource path="res://assets/Enemies/AttackController.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/Enemies/WanderController.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/CollisionBoxes/Hurtbox.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/Enemies/PlayerDetectionZone.tscn" type="PackedScene" id=5]
[ext_resource path="res://assets/CollisionBoxes/Hitbox.tscn" type="PackedScene" id=6]
[ext_resource path="res://assets/Enemies/EnemyHealth.tscn" type="PackedScene" id=7]
[ext_resource path="res://assets/Enemies/AttackPlayerZone.tscn" type="PackedScene" id=8]
[ext_resource path="res://assets/CollisionBoxes/SoftCollision.tscn" type="PackedScene" id=9]
[ext_resource path="res://assets/Enemies/EnemyStats.tscn" type="PackedScene" id=10]
[ext_resource path="res://assets/CollisionBoxes/EnemyHurtbox.gd" type="Script" id=11]
[ext_resource path="res://assets/Enemies/Wolf/Wolf.gd" type="Script" id=12]
[ext_resource path="res://assets/Enemies/Wolf/WolfStats.gd" type="Script" id=13]
[ext_resource path="res://assets/Shadows/MediumShadow.png" type="Texture" id=14]
[ext_resource path="res://assets/Enemies/Wolf/Wolf_spritesheet.png" type="Texture" id=15]
[ext_resource path="res://assets/Enemies/Wolf/Wolf_eye_spritesheet.png" type="Texture" id=16]

[sub_resource type="ShaderMaterial" id=1]
resource_local_to_scene = true
shader = ExtResource( 1 )
shader_param/active = false

[sub_resource type="CircleShape2D" id=2]
radius = 4.0

[sub_resource type="Animation" id=3]
resource_name = "IdleDown"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 38 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite/SpriteEye:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 38 ]
}

[sub_resource type="Animation" id=4]
resource_name = "IdleRight"
length = 0.1
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite/SpriteEye:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=5]
resource_name = "IdleUp"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 19 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite/SpriteEye:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 19 ]
}

[sub_resource type="Animation" id=6]
resource_name = "LeapDown"
length = 0.55
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.0625, 0.125, 0.1875, 0.25, 0.3125, 0.375, 0.4375, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 48, 49, 50, 51, 52, 53, 54, 55, 56 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite/SpriteEye:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.0625, 0.125, 0.1875, 0.25, 0.3125, 0.375, 0.4375, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 48, 49, 50, 51, 52, 53, 54, 55, 56 ]
}

[sub_resource type="Animation" id=7]
resource_name = "LeapRight"
length = 0.55
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.0625, 0.125, 0.1875, 0.25, 0.3125, 0.375, 0.4375, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 10, 11, 12, 13, 14, 15, 16, 17, 18 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite/SpriteEye:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.0625, 0.125, 0.1875, 0.25, 0.3125, 0.375, 0.4375, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 10, 11, 12, 13, 14, 15, 16, 17, 18 ]
}

[sub_resource type="Animation" id=8]
resource_name = "LeapUp"
length = 0.55
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.0625, 0.125, 0.1875, 0.25, 0.3125, 0.375, 0.4375, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 29, 30, 31, 32, 33, 34, 35, 36, 37 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite/SpriteEye:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.0625, 0.125, 0.1875, 0.25, 0.3125, 0.375, 0.4375, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 29, 30, 31, 32, 33, 34, 35, 36, 37 ]
}

[sub_resource type="Animation" id=9]
length = 0.7
loop = true
step = 0.15
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.15, 0.3, 0.45, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 39, 40, 41, 42, 43 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite/SpriteEye:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.15, 0.3, 0.45, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 39, 40, 41, 42, 43 ]
}

[sub_resource type="Animation" id=10]
length = 0.7
loop = true
step = 0.15
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.15, 0.3, 0.45, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 1, 2, 3, 4, 5 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite/SpriteEye:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.15, 0.3, 0.45, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 1, 2, 3, 4, 5 ]
}

[sub_resource type="Animation" id=11]
length = 0.7
loop = true
step = 0.15
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.15, 0.3, 0.45, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 20, 21, 22, 23, 24 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite/SpriteEye:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.15, 0.3, 0.45, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 20, 21, 22, 23, 24 ]
}

[sub_resource type="Animation" id=12]
length = 0.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:material:shader_param/active")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=13]
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:material:shader_param/active")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="AnimationNodeAnimation" id=14]
animation = "IdleDown"

[sub_resource type="AnimationNodeAnimation" id=15]
animation = "IdleUp"

[sub_resource type="AnimationNodeAnimation" id=16]
animation = "IdleRight"

[sub_resource type="AnimationNodeAnimation" id=17]
animation = "IdleRight"

[sub_resource type="AnimationNodeBlendSpace2D" id=18]
blend_point_0/node = SubResource( 14 )
blend_point_0/pos = Vector2( 0, 1.1 )
blend_point_1/node = SubResource( 15 )
blend_point_1/pos = Vector2( 0, -1.1 )
blend_point_2/node = SubResource( 16 )
blend_point_2/pos = Vector2( 1, 0 )
blend_point_3/node = SubResource( 17 )
blend_point_3/pos = Vector2( -1, 0 )
min_space = Vector2( -1, -1.1 )
max_space = Vector2( 1, 1.1 )

[sub_resource type="AnimationNodeTimeScale" id=19]

[sub_resource type="AnimationNodeBlendTree" id=20]
graph_offset = Vector2( 0, 97.5 )
nodes/BlendSpace2D/node = SubResource( 18 )
nodes/BlendSpace2D/position = Vector2( 380, 140 )
nodes/TimeScale/node = SubResource( 19 )
nodes/TimeScale/position = Vector2( 580, 140 )
nodes/output/position = Vector2( 740, 140 )
node_connections = [ "output", 0, "TimeScale", "TimeScale", 0, "BlendSpace2D" ]

[sub_resource type="AnimationNodeAnimation" id=21]
animation = "LeapDown"

[sub_resource type="AnimationNodeAnimation" id=22]
animation = "LeapRight"

[sub_resource type="AnimationNodeAnimation" id=23]
animation = "LeapRight"

[sub_resource type="AnimationNodeAnimation" id=24]
animation = "LeapUp"

[sub_resource type="AnimationNodeBlendSpace2D" id=25]
blend_point_0/node = SubResource( 21 )
blend_point_0/pos = Vector2( 0, 1.1 )
blend_point_1/node = SubResource( 22 )
blend_point_1/pos = Vector2( 1, 0 )
blend_point_2/node = SubResource( 23 )
blend_point_2/pos = Vector2( -1, 0 )
blend_point_3/node = SubResource( 24 )
blend_point_3/pos = Vector2( 0, -1.1 )
min_space = Vector2( -1, -1.1 )
max_space = Vector2( 1, 1.1 )

[sub_resource type="AnimationNodeTimeScale" id=26]

[sub_resource type="AnimationNodeBlendTree" id=27]
graph_offset = Vector2( -67.995, 81.8812 )
nodes/BlendSpace2D/node = SubResource( 25 )
nodes/BlendSpace2D/position = Vector2( 240, 80 )
nodes/TimeScale/node = SubResource( 26 )
nodes/TimeScale/position = Vector2( 440, 100 )
nodes/output/position = Vector2( 600, 140 )
node_connections = [ "output", 0, "TimeScale", "TimeScale", 0, "BlendSpace2D" ]

[sub_resource type="AnimationNodeAnimation" id=28]
animation = "MoveDown"

[sub_resource type="AnimationNodeAnimation" id=29]
animation = "MoveUp"

[sub_resource type="AnimationNodeAnimation" id=30]
animation = "MoveRight"

[sub_resource type="AnimationNodeAnimation" id=31]
animation = "MoveRight"

[sub_resource type="AnimationNodeBlendSpace2D" id=32]
blend_point_0/node = SubResource( 28 )
blend_point_0/pos = Vector2( 0, 1.1 )
blend_point_1/node = SubResource( 29 )
blend_point_1/pos = Vector2( 0, -1.1 )
blend_point_2/node = SubResource( 30 )
blend_point_2/pos = Vector2( 1, 0 )
blend_point_3/node = SubResource( 31 )
blend_point_3/pos = Vector2( -1, 0 )
min_space = Vector2( -1, -1.1 )
max_space = Vector2( 1, 1.1 )

[sub_resource type="AnimationNodeTimeScale" id=33]

[sub_resource type="AnimationNodeBlendTree" id=34]
nodes/BlendSpace2D/node = SubResource( 32 )
nodes/BlendSpace2D/position = Vector2( 80, 60 )
nodes/TimeScale/node = SubResource( 33 )
nodes/TimeScale/position = Vector2( 300, 60 )
nodes/output/position = Vector2( 460, 60 )
node_connections = [ "output", 0, "TimeScale", "TimeScale", 0, "BlendSpace2D" ]

[sub_resource type="AnimationNodeStateMachineTransition" id=35]

[sub_resource type="AnimationNodeStateMachineTransition" id=36]

[sub_resource type="AnimationNodeStateMachineTransition" id=37]

[sub_resource type="AnimationNodeStateMachineTransition" id=38]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id=39]

[sub_resource type="AnimationNodeStateMachineTransition" id=40]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachine" id=41]
states/Idle/node = SubResource( 20 )
states/Idle/position = Vector2( 626.94, 74.194 )
states/Leap/node = SubResource( 27 )
states/Leap/position = Vector2( 834.94, 131.194 )
states/Move/node = SubResource( 34 )
states/Move/position = Vector2( 626.94, 186.194 )
transitions = [ "Idle", "Move", SubResource( 35 ), "Move", "Idle", SubResource( 36 ), "Idle", "Leap", SubResource( 37 ), "Leap", "Idle", SubResource( 38 ), "Move", "Leap", SubResource( 39 ), "Leap", "Move", SubResource( 40 ) ]
start_node = "Idle"
graph_offset = Vector2( 364.604, 14.194 )

[sub_resource type="AnimationNodeStateMachinePlayback" id=42]

[sub_resource type="CircleShape2D" id=43]
radius = 16.0

[sub_resource type="CircleShape2D" id=44]
radius = 12.0

[sub_resource type="CircleShape2D" id=45]
radius = 16.0

[sub_resource type="CircleShape2D" id=46]
radius = 32.0

[sub_resource type="CircleShape2D" id=47]

[sub_resource type="CircleShape2D" id=48]
radius = 6.0

[node name="Wolf" type="KinematicBody2D"]
collision_layer = 16
script = ExtResource( 12 )

[node name="ShadowSprite" type="Sprite" parent="."]
texture = ExtResource( 14 )

[node name="Sprite" type="Sprite" parent="."]
material = SubResource( 1 )
position = Vector2( 0, -2 )
texture = ExtResource( 15 )
offset = Vector2( 0, -12 )
vframes = 3
hframes = 19
frame = 19

[node name="SpriteEye" type="Sprite" parent="Sprite"]
texture = ExtResource( 16 )
offset = Vector2( 0, -12 )
vframes = 3
hframes = 19
frame = 19

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -3 )
shape = SubResource( 2 )

[node name="WolfStats" parent="." instance=ExtResource( 10 )]
script = ExtResource( 13 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "IdleDown"
anims/IdleDown = SubResource( 3 )
anims/IdleRight = SubResource( 4 )
anims/IdleUp = SubResource( 5 )
anims/LeapDown = SubResource( 6 )
anims/LeapRight = SubResource( 7 )
anims/LeapUp = SubResource( 8 )
anims/MoveDown = SubResource( 9 )
anims/MoveRight = SubResource( 10 )
anims/MoveUp = SubResource( 11 )
anims/StartFlashing = SubResource( 12 )
anims/StopFlashing = SubResource( 13 )

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 41 )
anim_player = NodePath("../AnimationPlayer")
parameters/playback = SubResource( 42 )
parameters/Idle/BlendSpace2D/blend_position = Vector2( -0.00170648, 1.07778 )
parameters/Idle/TimeScale/scale = 1.0
parameters/Leap/BlendSpace2D/blend_position = Vector2( -0.000859857, -0.00628579 )
parameters/Leap/TimeScale/scale = 1.0
parameters/Move/BlendSpace2D/blend_position = Vector2( 0, 0 )
parameters/Move/TimeScale/scale = 1.0

[node name="Talkbox" type="Area2D" parent="."]
visible = false
collision_layer = 128
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Talkbox"]
position = Vector2( 0, -12 )
shape = SubResource( 43 )

[node name="Hitbox" parent="." instance=ExtResource( 6 )]
position = Vector2( 0, -8 )
collision_mask = 4
damage = 16.0
accuracy = 4.0

[node name="CollisionShape2D" parent="Hitbox" index="0"]
shape = SubResource( 44 )

[node name="Hurtbox" parent="." instance=ExtResource( 4 )]
position = Vector2( 0, 4 )
collision_layer = 8
script = ExtResource( 11 )

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
position = Vector2( 0, -16 )
shape = SubResource( 45 )

[node name="WanderController" parent="." instance=ExtResource( 3 )]
visible = false

[node name="PlayerDetectionZone" parent="." instance=ExtResource( 5 )]
visible = false
scale = Vector2( 3, 3 )
input_pickable = false

[node name="CollisionShape2D" parent="PlayerDetectionZone" index="0"]
shape = SubResource( 46 )

[node name="ChaseTimer" type="Timer" parent="PlayerDetectionZone"]
wait_time = 0.75

[node name="AttackController" parent="." instance=ExtResource( 2 )]
visible = false

[node name="AttackPlayerZone" parent="." instance=ExtResource( 8 )]
visible = false
scale = Vector2( 2, 2 )
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" parent="AttackPlayerZone" index="0"]
scale = Vector2( 2, 2 )
shape = SubResource( 47 )

[node name="AttackTimer" type="Timer" parent="AttackPlayerZone"]
wait_time = 0.8
one_shot = true

[node name="SoftCollision" parent="." instance=ExtResource( 9 )]
visible = false

[node name="CollisionShape2D" parent="SoftCollision" index="0"]
position = Vector2( 0, -1 )
shape = SubResource( 48 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.4
one_shot = true

[node name="DelayTimer" type="Timer" parent="."]
wait_time = 0.4
one_shot = true

[node name="Tween" type="Tween" parent="."]

[node name="AudioStreamPlayer" type="AudioStreamPlayer2D" parent="."]
max_distance = 320.0
attenuation = 0.659754

[node name="EnemyHealth" parent="." instance=ExtResource( 7 )]
visible = false
position = Vector2( 0, 5 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
[connection signal="no_health" from="WolfStats" to="." method="_on_WolfStats_no_health"]
[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]
[connection signal="invincibility_ended" from="Hurtbox" to="." method="_on_Hurtbox_invincibility_ended"]
[connection signal="invincibility_started" from="Hurtbox" to="." method="_on_Hurtbox_invincibility_started"]
[connection signal="timeout" from="AttackPlayerZone/AttackTimer" to="." method="_on_AttackTimer_timeout"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]

[editable path="Hitbox"]

[editable path="Hurtbox"]

[editable path="PlayerDetectionZone"]

[editable path="AttackPlayerZone"]

[editable path="SoftCollision"]
